@@ -1,7 +1,5 @@
 Compare with ode113 in the demo
-
 OutputFcn behaves differently from that of ode45 
-Check whether p+2 for the stepsize adjustment is indeed correct!
 add support for string functions with feval/varargin{:}
 create custom deval() which extends built-in version
 Strategy for dense output should be different; first, large steps should be made, which are then used as stepping stones to start new integrations from; this improves accuracy.
