@@ -1,5 +1,10 @@
 % Changelog: 
 
+2014/June/25 (Rody Oldenhuis)
+- CHANGED: max(abs(.)) -> norm(.,'inf') for performance reasons. 
+- FIXED  : The power used in stepsize control should be based on the method's 
+           lower embedded order, PLUS 1 (not 2). So 11, not 14. 
+
 2014/June/05 (Rody Oldenhuis)
 - CHANGED: step adjustment now also considers RelTol (which might be more stringent            than AbsTol)
 - FIXED: minor adjustments to allow for settings like AbsTol = inf
